sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var eff : boolean = false;
	while(!eff){
		var i : Int = 0
		var lgr : Int = getNombreValeurs();
		while(i <= lgr - 2) {
			if(plusPetit(i+1, i)){
				echange(i+1, i);
				eff = true;
			}
			i = i+1
		}
	}
}
